--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body{
 
 em{
 	color: #7090FF;
+	font-style: normal;
 }
 
 #container{
@@ -83,6 +84,11 @@ em{
 .head{
 	font-weight: bold;
 	font-size: 20px;
+}
+
+.head a{
+	color: inherit;
+	text-decoration: none;
 }
 
 .head:not(:first-of-type){
