--- a/index.css
+++ b/index.css
@@ -11,6 +11,18 @@ body{
 	color: #161618;
 }
 
+::-webkit-scrollbar{
+	width: 10px;
+	height: 100%;
+	background-color: #161618;
+	overflow: scroll;
+}
+
+::-webkit-scrollbar-thumb{
+	min-height: 50px;
+	background-color: #EDEDF0;
+}
+
 #container{
 	width: 80%;
 	margin: 25px auto 0;
@@ -63,7 +75,6 @@ body{
 }
 
 .head{
-	font-weight: bold;
 	font-size: 20px;
 }
 
