--- a/index.css
+++ b/index.css
@@ -1,8 +1,15 @@
+@font-face{
+	font-family: 'pxfontTangut';
+	src: url('./fonts/pxfontTangut.ttf');
+	font-weight: noraml;
+	font-style: normal;
+}
+
 body{
 	margin: 0;
 	background-color: #161618;
 	color: #EDEDF0;
-	font-family: 'unifontEx';
+	font-family: 'unifontEx', 'pxfontTangut';
 	font-size: 16px;
 	overflow-y: scroll;
 }
