--- a/index.css
+++ b/index.css
@@ -111,6 +111,15 @@ body{
 	opacity: 0.75;
 }
 
+.edit{
+	display: inline-block;
+	margin-top: 10px;
+	opacity:0.75;
+	font-size: 14px;
+	text-decoration: none;
+	color: inherit;
+}
+
 .input{
 	display: block;
 	margin: 50px auto;
