--- a/index.css
+++ b/index.css
@@ -107,6 +107,16 @@ body{
 	border-left: 2px solid #EDEDF0;
 }
 
+.example-independent{
+	margin: 5px 0 5px 2px;
+	padding-left: 10px;
+	border-left: 2px solid #EDEDF0;
+}
+
+.example-independent:not(:first-of-type){
+	margin-top: 25px;
+}
+
 .information{
 	opacity: 0.75;
 }
